fix issue with navigation menu on tablet screens (portrait mode)

--- a/source/stylesheets/partials/_nav.scss
+++ b/source/stylesheets/partials/_nav.scss
@@ -2,7 +2,7 @@
   $large-screen: 50em !default;
   $medium-screen: 30em !default;
   padding: 1em;
-  @include media($medium-screen) {
+  @include media($large-screen) {
     padding-left: 40px;
     padding-right: 40px;
     padding-top: 16px;
